--- a/4_python_programa/3_1first_app.ipynb
+++ b/4_python_programa/3_1first_app.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Віднімання:\n",
+      " [[-11. -10.  -9.]\n",
+      " [-11. -10.  -9.]\n",
+      " [-11. -10.  -9.]]\n",
+      "Множення:\n",
+      " [[0.01215521 0.31208782 0.94902053]\n",
+      " [0.04192425 0.71017901 0.16089708]\n",
+      " [0.36133341 0.18585694 0.07045208]]\n",
+      "Ділення:\n",
+      " [[       inf 0.31208782 0.47451026]\n",
+      " [       inf 0.71017901 0.08044854]\n",
+      " [       inf 0.18585694 0.03522604]]\n",
+      "Степінь:\n",
+      " [[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "Поріняння:\n",
+      " [[False False  True]\n",
+      " [False  True False]\n",
+      " [False False False]]\n",
+      "Ділення на 0:\n",
+      " [[inf inf inf]\n",
+      " [inf inf inf]\n",
+      " [inf inf inf]]\n",
+      "\n",
+      "\n",
+      ">>>>> \n",
+      "- Створіть власну матрицю за допомогою методу eye та виконайте порівняння на наявність 1.\n",
+      "- Створіть матрицю ones та відніміть від неї матрицю eye (щоб у результаті вийшла матриця де цетнтральні діагональ все нулі).\n",
+      " \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_6552\\1505572651.py:11: RuntimeWarning: divide by zero encountered in divide\n",
+      "  Ділення:\\n {R / C}\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_6552\\1505572651.py:14: RuntimeWarning: divide by zero encountered in divide\n",
+      "  Ділення на 0:\\n {O / Z}\n"
+     ]
+    }
+   ],
    "source": [
     "l = (3, 3)\n",
     "\n",
@@ -63,6 +112,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Створила власну матрицю за допомогою методу eye та виконала порівняння на наявність 1.\n",
+    "- Створила матрицю ones та відняла від неї матрицю eye (щоб у результаті вийшла матриця де цетнтральні діагональ все нулі)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Матриця eye:\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "\n",
+      "Матриця ones:\n",
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "\n",
+      "Результат віднімання:\n",
+      "[[ 0. -1. -1.]\n",
+      " [-1.  0. -1.]\n",
+      " [-1. -1.  0.]]\n",
+      "\n",
+      "Порівняння наявності 1 в результаті:\n",
+      "Матриця містить 1: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Створення матриці за допомогою методу eye\n",
+    "l = (3, 3)\n",
+    "eye_matrix = np.eye(l[0])\n",
+    "\n",
+    "# Створення матриці ones\n",
+    "ones_matrix = np.ones(l)\n",
+    "\n",
+    "# Віднімання матриці ones від матриці eye\n",
+    "result_matrix = eye_matrix - ones_matrix\n",
+    "\n",
+    "print(\"Матриця eye:\")\n",
+    "print(eye_matrix)\n",
+    "\n",
+    "print(\"\\nМатриця ones:\")\n",
+    "print(ones_matrix)\n",
+    "\n",
+    "print(\"\\nРезультат віднімання:\")\n",
+    "print(result_matrix)\n",
+    "\n",
+    "# Порівняння наявності 1 в матриці\n",
+    "contains_one = np.any(result_matrix == 1)\n",
+    "\n",
+    "print(\"\\nПорівняння наявності 1 в результаті:\")\n",
+    "print(f\"Матриця містить 1: {contains_one}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##Множення матриць"
    ]
   },
@@ -75,9 +190,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Маємо два масиви:\n",
+      " [[1 2 3]\n",
+      " [2 2 2]\n",
+      " [3 3 3]] \n",
+      " [[ 3  2  1]\n",
+      " [ 1  2  3]\n",
+      " [-1 -2 -3]]\n",
+      "Тут виконується поелементне множення:\n",
+      " [[ 3  4  3]\n",
+      " [ 2  4  6]\n",
+      " [-3 -6 -9]]\n",
+      "Тут, масиви перемножуються як матриці:\n",
+      " [[ 2  0 -2]\n",
+      " [ 6  4  2]\n",
+      " [ 9  6  3]]\n",
+      "Тут масиви перетворені на матриці і далі перемножуються:\n",
+      " [[ 2  0 -2]\n",
+      " [ 6  4  2]\n",
+      " [ 9  6  3]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([ [1, 2, 3], [2, 2, 2], [3, 3, 3] ])\n",
     "B = np.array([ [3, 2, 1], [1, 2, 3], [-1, -2, -3] ])\n",
@@ -112,9 +253,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вектор В є рядком (3,): [1 2 3] тому додавання буде по рядках:\n",
+      " [[12 14 16]\n",
+      " [22 24 26]\n",
+      " [32 34 36]]\n",
+      "Вектор C є стовпцем (3, 1):\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "тому додавання буде по стовпцям:\n",
+      "[[12 13 14]\n",
+      " [23 24 25]\n",
+      " [34 35 36]]\n",
+      "У випадку додавання рядка до стовпця буде матриця в якої доповнюються рядки і стовпці:\n",
+      " [[2 3 4]\n",
+      " [3 4 5]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([ [11, 12, 13], [21, 22, 23], [31, 32, 33] ])\n",
     "B = np.array([1, 2, 3])\n",
@@ -160,9 +324,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "При конкатенації рядків маємо: [1. 1. 1. 1. 1. 1.]\")\n",
+      "При конкатенації стовпців маємо:\n",
+      "[[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]]\n",
+      "Масив D [1. 1. 1.] має розмірність (3,) тому може виконати операцію конкатенації з В [1 2 3] розмірністю (3,):\n",
+      "[1. 2. 3. 1. 1. 1.]\n",
+      "Для конкатенації з С\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "де С має розмірність = (3, 1) потрібно змінити розмірність D = (3,)\n",
+      "Це можна ось так:\n",
+      "(3, 1)\n",
+      "або\n",
+      "(3, 1)\n",
+      "в результаті ми можем виконати конкатенацію:\n",
+      "[[1.]\n",
+      " [2.]\n",
+      " [3.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]]\n",
+      "При повторенні D [1. 1. 1.] 2 рази для рядкі та 3 для стовпців будем мати:\n",
+      "[[1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "Як бачимо конкатенація та повторення є дещо схожими у деяких випадках:\n",
+      "- конкатенація: [1. 1. 1. 1. 1. 1.]\n",
+      "- повторення: [1. 1. 1. 1. 1. 1.]\n",
+      "Також можна перетворити двовимірний масив A розмірністю (3, 3) на рядок: [11 12 13 21 22 23 31 32 33] з розмірністю (9,)\n",
+      "\n",
+      "\n",
+      ">>>>> Створіть двохвимірний масив за допомогою arange та виконайте конкатенацію та повторення.\n",
+      "Створіть масив в якому кількість рядків та стовпців різна. Спробуйте виконати конкатенацію такого масиву з попереднім. Якщо розмірність масивів не співпадає використайте reshape.\n",
+      "Створіть декілька двовимірних масивів з сумарною розмірністю 12 та знайдіть всі можливі комбінації reshape. Наприклад, перша комбінація це рядок - [[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      " \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "D = np.ones(3)\n",
     "Z = np.zeros((3,1))\n",
@@ -191,9 +403,94 @@
     "\n",
     "\n",
     "homework(f\"\"\"Створіть двохвимірний масив за допомогою arange та виконайте конкатенацію та повторення.\n",
-    "Створіть масив в якому кількість рядкі та стовпців різна. Спробуйте виконати конкатенацію такого масиву з попереднім. Якщо розмірність масивів не спаівпадє використайте reshape.\n",
-    "Створіть декіль двовимірних масивів з сумарною розмірністю 12 та знайдіть всі можливі комбінції reshape. Наприклад, перша комбінація це рядок - {np.ones((1,12))}\n",
+    "Створіть масив в якому кількість рядків та стовпців різна. Спробуйте виконати конкатенацію такого масиву з попереднім. Якщо розмірність масивів не співпадає використайте reshape.\n",
+    "Створіть декілька двовимірних масивів з сумарною розмірністю 12 та знайдіть всі можливі комбінації reshape. Наприклад, перша комбінація це рядок - {np.ones((1,12))}\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Створила двовимірний масив за допомогою arange та виконала конкатенацію та повторення.\n",
+    "Створила масив в якому кількість рядків та стовпців різна. Виконала конкатенацію такого масиву з попереднім. Якщо розмірність масивів не співпадає використайте reshape.\n",
+    "Створила декілька двовимірних масивів з сумарною розмірністю 12 та знайти всі можливі комбінації reshape. Наприклад, перша комбінація це рядок - {np.ones((1,12))}    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "При конкатенації рядків маємо: [1. 1. 1. 1. 1. 1.]\n",
+      "При конкатенації стовпців маємо:\n",
+      "[[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]]\n",
+      "\n",
+      "Масив D [1. 1. 1.] має розмірність (3,) тому може виконати операцію конкатенації з В [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]] розмірністю (3, 3):\n",
+      "[[1. 2. 3. 1.]\n",
+      " [4. 5. 6. 1.]\n",
+      " [7. 8. 9. 1.]]\n",
+      "\n",
+      "При повторенні D [1. 1. 1.] 2 рази для рядків та 3 для стовпців будем мати:\n",
+      "[[1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      "Як бачимо, конкатенація та повторення є дещо схожими у деяких випадках:\n",
+      "- конкатенація: [1. 1. 1. 1. 1. 1.]\n",
+      "- повторення: [1. 1. 1. 1. 1. 1.]\n",
+      "\n",
+      "Також можна перетворити двовимірний масив A розмірністю (3, 4) на рядок: [ 1  2  3  4  5  6  7  8  9 10 11 12] з розмірністю (12,)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.arange(1, 13).reshape(3, 4)\n",
+    "\n",
+    "B = np.arange(1, 10).reshape(3, 3)\n",
+    "\n",
+    "D = np.ones(3)\n",
+    "Z = np.zeros((3, 1))\n",
+    "\n",
+    "concatenated_rows = np.concatenate((D, D))\n",
+    "concatenated_columns = np.concatenate((Z, Z))\n",
+    "\n",
+    "C = B.copy()\n",
+    "D_reshaped = D[:, np.newaxis]\n",
+    "concatenated_with_reshaped_D = np.concatenate((C, D_reshaped), axis=1)  # Змінено axis на 1\n",
+    "\n",
+    "repeated_D = np.tile(D, (2, 3))\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "При конкатенації рядків маємо: {concatenated_rows}\n",
+    "При конкатенації стовпців маємо:\\n{concatenated_columns}\n",
+    "\n",
+    "Масив D {D} має розмірність {D.shape} тому може виконати операцію конкатенації з В {B} розмірністю {B.shape}:\n",
+    "{concatenated_with_reshaped_D}\n",
+    "\n",
+    "При повторенні D {D} 2 рази для рядків та 3 для стовпців будем мати:\n",
+    "{repeated_D}\n",
+    "\n",
+    "Як бачимо, конкатенація та повторення є дещо схожими у деяких випадках:\n",
+    "- конкатенація: {concatenated_rows}\n",
+    "- повторення: {np.tile(D, 2)}\n",
+    "\n",
+    "Також можна перетворити двовимірний масив A розмірністю {A.shape} на рядок: {A.flatten()} з розмірністю {A.flatten().shape}\n",
+    "\"\"\")\n"
    ]
   },
   {
@@ -226,9 +523,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "Змінити розмірність shape (3, 2) на (2, 3) при цьому розмір size 6 = 6 та ndim 2 = 2:\n",
+      "[[0 1 2]\n",
+      " [3 4 5]]\n",
+      "Також можна перетворити 2-х вимірний масив розмірністю (3, 2) на рядок:\n",
+      "[0 1 2 3 4 5] \n",
+      "з розмірністю (6,) при цьому size = 6 та ndim стане 1-х вимірним \n",
+      "Або транспонувати масив щоб він став (2, 3) але зверніть увагу на елементи:\n",
+      "[[0 2 4]\n",
+      " [1 3 5]]\n",
+      "Можна обернути масив (обертаємо по стовпцях і рядках одночасно): \n",
+      "[[5 4]\n",
+      " [3 2]\n",
+      " [1 0]]\n",
+      "Або обернути лише елементи в кожному рядку (або стовпці):\n",
+      "[[1 0]\n",
+      " [3 2]\n",
+      " [5 4]]\n",
+      "\n",
+      "\n",
+      ">>>>> \n",
+      "- Створіть вектор з 12 елементів, визначте його shape, size та ndim;\n",
+      "- Змініть розмірніть перетворивши вектор у матрицю;\n",
+      "- Здійсніть транспонування отриманої матриці та оберніть її;\n",
+      "- Перетворіть отриманий багатовимірний масив назад у вектор (стрічку);\n",
+      " \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "O = np.arange(6).reshape(3,2)\n",
     "O_r = O.reshape((2,3))\n",
@@ -258,11 +591,81 @@
     "- Перетворіть отриманий багатовимірний масив назад у вектор (стрічку);\n",
     "\"\"\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Створила вектор з 12 елементів, визначила його shape, size та ndim;\n",
+    "- Змінила розмірніть перетворивши вектор у матрицю;\n",
+    "- Здійснила транспонування отриманої матриці та обернула її;\n",
+    "- Перетворила отриманий багатовимірний масив назад у вектор (стрічку);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Початковий вектор:\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "З його shape (12,), розміром 12 та ndim 1\n",
+      "\n",
+      "Матриця після reshape:\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "Її транспонована матриця:\n",
+      "[[ 0  4  8]\n",
+      " [ 1  5  9]\n",
+      " [ 2  6 10]\n",
+      " [ 3  7 11]]\n",
+      "\n",
+      "Вектор після зворотнього перетворення:\n",
+      "[ 0  4  8  1  5  9  2  6 10  3  7 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "vector = np.arange(12)\n",
+    "\n",
+    "vector_shape = vector.shape\n",
+    "vector_size = vector.size\n",
+    "vector_ndim = np.ndim(vector)\n",
+    "\n",
+    "matrix = vector.reshape((3, 4))\n",
+    "matrix_transposed = matrix.T  \n",
+    "vector_back = matrix_transposed.flatten()\n",
+    "\n",
+    "print(f\"Початковий вектор:\\n{vector}\\nЗ його shape {vector_shape}, розміром {vector_size} та ndim {vector_ndim}\")\n",
+    "print(f\"\\nМатриця після reshape:\\n{matrix}\\nЇї транспонована матриця:\\n{matrix_transposed}\")\n",
+    "print(f\"\\nВектор після зворотнього перетворення:\\n{vector_back}\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
